--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
@@ -19,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
+    "supabase": "^2.9.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
